<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/main_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/main_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/main_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/ic_main_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_line1"
        >

        <TextView
            android:id="@+id/textView"
            android:gravity="center"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            android:text="Hello SUSTech" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_user_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_yellow_green"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_line3"
        app:layout_constraintBottom_toTopOf="@id/main_line2"
        >
        <TextView
            android:id="@+id/main_user_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Log out"
            android:textColor="@color/color_white"
            android:padding="10dp"
            />
        <TextView
            android:id="@+id/main_user_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/color_white"
            android:gravity="center"
            android:padding="6dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/mainhead"
            android:textSize="18sp"
            />

    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_signin_layout"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_yellow_green"
        app:layout_constraintBottom_toTopOf="@id/main_line2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_line3" app:layout_constraintVertical_bias="1.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:padding="8dp"
            android:text="Welcome to Hello SUStech!"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Connect to your account to explore more functions!"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
        />
        <Button
            android:id="@+id/main_signin_btn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:background="#259B24"
            android:text="SIGN IN"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/main_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="All Categories"
        android:textColor="@color/custom_gray"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_line2"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text2"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            >
            <com.example.xuversion.widget.MyImageButton
                android:id="@+id/main_xiaoLi_button"
                android:layout_columnWeight = "1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="3dp"
                android:background="@color/color_purple"
                >
            </com.example.xuversion.widget.MyImageButton>

            <com.example.xuversion.widget.MyImageButton
                android:id="@+id/main_map_button"
                android:layout_columnWeight = "1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="3dp"
                android:background="@color/color_orange"
               >
            </com.example.xuversion.widget.MyImageButton>

            <com.example.xuversion.widget.MyImageButton
                android:id="@+id/main_building_button"
                android:layout_columnWeight = "1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="3dp"
                android:background="@color/color_teal"
                >
            </com.example.xuversion.widget.MyImageButton>

            <com.example.xuversion.widget.MyImageButton
                android:id="@+id/main_class_button"
                android:layout_columnWeight = "1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="3dp"
                android:background="@color/color_blue"
                >
            </com.example.xuversion.widget.MyImageButton>




        </GridLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>