<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        >
    </com.amap.api.maps.MapView>

    <LinearLayout
        android:id="@+id/maingo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:background="@drawable/bodereditext"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >


        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="寻找你要去的地方"
            android:gravity="left|center"
            android:textSize="15sp"
            android:paddingLeft="2dp"
            android:textColor="@color/custom_gray"

            android:textStyle="italic"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_search"
            android:layout_marginLeft="3dp"
            android:paddingRight="5dp"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>